--- a/src/mail-templates/email-confirmation.html
+++ b/src/mail-templates/email-confirmation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
   <meta charset="utf-8">
@@ -7,106 +8,110 @@
   <title>Email Confirmation</title>
   <meta name="viewpublic_port" content="width=device-width, initial-scale=1">
   <style type="text/css">
-  /**
+    /**
    * Google webfonts. Recommended to include the .woff version for cross-client compatibility.
    */
-  @media screen {
-    @font-face {
-      font-family: 'Source Sans Pro';
-      font-style: normal;
-      font-weight: 400;
-      src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/ODelI1aHBYDBqgeIAH2zlBM0YzuT7MdOe03otPbuUS0.woff) format('woff');
+    @media screen {
+      @font-face {
+        font-family: 'Source Sans Pro';
+        font-style: normal;
+        font-weight: 400;
+        src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/ODelI1aHBYDBqgeIAH2zlBM0YzuT7MdOe03otPbuUS0.woff) format('woff');
+      }
+
+      @font-face {
+        font-family: 'Source Sans Pro';
+        font-style: normal;
+        font-weight: 700;
+        src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/toadOcfmlt9b38dHJxOBGFkQc6VGVFSmCnC_l7QZG60.woff) format('woff');
+      }
     }
 
-    @font-face {
-      font-family: 'Source Sans Pro';
-      font-style: normal;
-      font-weight: 700;
-      src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/toadOcfmlt9b38dHJxOBGFkQc6VGVFSmCnC_l7QZG60.woff) format('woff');
-    }
-  }
-
-  /**
+    /**
    * Avoid browser level font resizing.
    * 1. Windows Mobile
    * 2. iOS / OSX
    */
-  body,
-  table,
-  td,
-  a {
-    -ms-text-size-adjust: 100%; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
-  }
+    body,
+    table,
+    td,
+    a {
+      -ms-text-size-adjust: 100%;
+      /* 1 */
+      -webkit-text-size-adjust: 100%;
+      /* 2 */
+    }
 
-  /**
+    /**
    * Remove extra space added to tables and cells in Outlook.
    */
-  table,
-  td {
-    mso-table-rspace: 0pt;
-    mso-table-lspace: 0pt;
-  }
+    table,
+    td {
+      mso-table-rspace: 0pt;
+      mso-table-lspace: 0pt;
+    }
 
-  /**
+    /**
    * Better fluid images in Internet Explorer.
    */
-  img {
-    -ms-interpolation-mode: bicubic;
-  }
+    img {
+      -ms-interpolation-mode: bicubic;
+    }
 
-  /**
+    /**
    * Remove blue links for iOS devices.
    */
-  a[x-apple-data-detectors] {
-    font-family: inherit !impublic_portant;
-    font-size: inherit !impublic_portant;
-    font-weight: inherit !impublic_portant;
-    line-height: inherit !impublic_portant;
-    color: inherit !impublic_portant;
-    text-decoration: none !impublic_portant;
-  }
+    a[x-apple-data-detectors] {
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      color: inherit !important;
+      text-decoration: none !important;
+    }
 
-  /**
+    /**
    * Fix centering issues in Android 4.4.
    */
-  div[style*="margin: 16px 0;"] {
-    margin: 0 !impublic_portant;
-  }
+    div[style*="margin: 16px 0;"] {
+      margin: 0 !important;
+    }
 
-  body {
-    width: 100% !impublic_portant;
-    height: 100% !impublic_portant;
-    padding: 0 !impublic_portant;
-    margin: 0 !impublic_portant;
-  }
+    body {
+      width: 100% !important;
+      height: 100% !important;
+      padding: 0 !important;
+      margin: 0 !important;
+    }
 
-  /**
+    /**
    * Collapse table borders to avoid space between cells.
    */
-  table {
-    border-collapse: collapse !impublic_portant;
-  }
+    table {
+      border-collapse: collapse !important;
+    }
 
-  a {
-    color: #1a82e2;
-  }
+    a {
+      color: #1a82e2;
+    }
 
-  img {
-    height: auto;
-    line-height: 100%;
-    text-decoration: none;
-    border: 0;
-    outline: none;
-  }
+    img {
+      height: auto;
+      line-height: 100%;
+      text-decoration: none;
+      border: 0;
+      outline: none;
+    }
   </style>
 
 </head>
+
 <body style="background-color: #e9ecef;">
 
   <!-- start preheader -->
-  <div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
-    A preheader is the short summary text that follows the subject line when an email is viewed in the inbox.
+  <div class="preheader"
+    style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
+    Proflyl
   </div>
   <!-- end preheader -->
 
@@ -124,8 +129,9 @@
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
           <tr>
             <td align="center" valign="top" style="padding: 36px 24px;">
-              <a href="{{ protocol }}://{{ host }}:{{ public_port }}/images/proflyl-logo.png" target="_blank" style="display: inline-block;">
-                <img src="{{ protocol }}://{{ host }}:{{ public_port }}/images/proflyl-logo.png" alt="Logo" border="0" width="48" style="display: block; width: 48px; max-width: 48px; min-width: 48px;">
+              <a href="{{domain}}/images/proflyl-logo.png" target="_blank" style="display: inline-block;">
+                <img src="{{domain}}/images/proflyl-logo.png" alt="Logo" border="0" width="48"
+                  style="display: block; width: 48px; max-width: 48px; min-width: 48px;">
               </a>
             </td>
           </tr>
@@ -149,8 +155,10 @@
         <![endif]-->
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
           <tr>
-            <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-              <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Confirm Your Email Address</h1>
+            <td align="left" bgcolor="#ffffff"
+              style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
+              <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Confirm
+                Your Email Address</h1>
             </td>
           </tr>
         </table>
@@ -175,8 +183,10 @@
 
           <!-- start copy -->
           <tr>
-            <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-              <p style="margin: 0;">Tap the button below to confirm your email address. If you didn't create an account with <a href="{{ protocol }}://{{ host }}:{{ public_port }}">Proflyl</a>, you can safely delete this email.</p>
+            <td align="left" bgcolor="#ffffff"
+              style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+              <p style="margin: 0;">Tap the button below to confirm your email address. If you didn't create an account
+                with <a href="{{domain}}">{{ company_name }}</a>, you can safely delete this email.</p>
             </td>
           </tr>
           <!-- end copy -->
@@ -190,7 +200,9 @@
                     <table border="0" cellpadding="0" cellspacing="0">
                       <tr>
                         <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                          <a href="{{ protocol }}://{{ host }}:{{ public_port }}/user/verification/email/{{ user_id }}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Verify Email</a>
+                          <a href="{{domain}}/auth/verify-user/{{ user_id }}/email/{{ token }}" target="_blank"
+                            style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Verify
+                            Email</a>
                         </td>
                       </tr>
                     </table>
@@ -203,17 +215,20 @@
 
           <!-- start copy -->
           <tr>
-            <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+            <td align="left" bgcolor="#ffffff"
+              style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
               <p style="margin: 0;">If that doesn't work, copy and paste the following link in your browser:</p>
-              <p style="margin: 0;"><a href="{{ protocol }}://{{ host }}:{{ public_port }}/user/verification/email/{{ user_id }}" target="_blank">{{ protocol }}://{{ host }}:{{ public_port }}/user/verification/email/{{ user_id }}</a></p>
+              <p style="margin: 0;font-size:10px;"><a href="{{domain}}/auth/verify-user/{{ user_id }}/email/{{ token }}"
+                  target="_blank">{{domain}}/auth/verify-user/{{ user_id }}/email/{{ token }}</a></p>
             </td>
           </tr>
           <!-- end copy -->
 
           <!-- start copy -->
           <tr>
-            <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
-              <p style="margin: 0;">Cheers,<br> Proflyl</p>
+            <td align="left" bgcolor="#ffffff"
+              style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
+              <p style="margin: 0;">Cheers,<br> {{ company_name }}</p>
             </td>
           </tr>
           <!-- end copy -->
@@ -240,17 +255,21 @@
 
           <!-- start permission -->
           <tr>
-            <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-              <p style="margin: 0;">You received this email because we received a request for registration for your account. If you didn't request registration you can safely delete this email.</p>
+            <td align="center" bgcolor="#e9ecef"
+              style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
+              <p style="margin: 0;">You received this email because we received a request for registration for your
+                account. If you didn't request registration you can safely delete this email.</p>
             </td>
           </tr>
           <!-- end permission -->
 
           <!-- start unsubscribe -->
           <tr>
-            <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-              <p style="margin: 0;">To stop receiving these emails, you can <a href="https://www.proflyl.com/updates/unsubscribe" target="_blank">unsubscribe</a> at any time.</p>
-              <p style="margin: 0;">Proflyl, Mumbai, Maharashtra, India</p>
+            <td align="center" bgcolor="#e9ecef"
+              style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
+              <p style="margin: 0;">To stop receiving these emails, you can <a href="{{ url }}/updates/unsubscribe"
+                  target="_blank">unsubscribe</a> at any time.</p>
+              <p style="margin: 0;">{{ company_name }}, Mumbai, Maharashtra, India</p>
             </td>
           </tr>
           <!-- end unsubscribe -->
@@ -269,4 +288,5 @@
   <!-- end body -->
 
 </body>
+
 </html>
